--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Vieros</title>
     <link rel="stylesheet" href="estilos/style.css"> 
     <link rel="stylesheet" href="estilos/bootstrap.css"> 
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+
     
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +43,7 @@
     <section id="hero">
         <div class="container">
             <div class="content-center topmargin-md">
-                <h1>Polleria Vieros</h1>
+                <h1 class="animate__animated animate__zoomIn">Polleria Vieros</h1>
                 <p>El mejor pollo a la brasa de lima norte</p>
                 <a href="#portafolio" class="btn btn-danger topmargin-md">Productos <i class="fas fa-arrow-alt-circle-down"></i></a>
             </div>
@@ -310,14 +314,13 @@
         <div class="container logo-brand">
             <div class="row">
                  <div class="col-md-7">
-                    <div class="logo-center">
-                        <img src="imagenes/delivery.png" alt=""/>
-                    </div>
                     <div class="contacto">
                         <div class="content-center">
-                            <h4>Direccion</h4>
+                            <h4><i class="fas fa-location-arrow"></i> Ubicanos</h4>
                             <h5>Asoc. Victor Raul Halla de la Torre 551</h5>
-                            <div class="row topmargin-md">
+                            <div class="topmargin-md"></div>
+                            <h4><i class="fas fa-headset"></i> Contactanos</h4>
+                            <div class="row">
                                 <div class="col-md-4">
                                     <i class="fas fa-mobile-alt"></i>
                                     <p>965877412</p>
@@ -334,8 +337,10 @@
                         </div>
                     </div>       
                 </div>
-                <div class="contacto col-md-5">
+                <div class="col-md-1"></div>
+                <div class="contacto col-md-4">
                     <div class="map">
+                        <h4><i class="fas fa-map-marked-alt"></i> Nos encontramos en...</h4>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.9754759090606!2d-77.05814718457631!3d-11.976198743853928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cf3a90c6f175%3A0xe25fd30c213cf479!2sPolleria%20Vieros!5e0!3m2!1ses-419!2spe!4v1589649237353!5m2!1ses-419!2spe" ></iframe>
                     </div>
                 </div>
