--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <section id="hero">
         <div class="container">
             <div class="content-center topmargin-md">
-                <h1 class="animate__animated animate__zoomIn">Polleria Vieros</h1>
-                <p>El mejor pollo a la brasa de lima norte</p>
-                <a href="#portafolio" class="btn btn-danger topmargin-md">Productos <i class="fas fa-arrow-alt-circle-down"></i></a>
+                <h1 class="animate__animated animate__zoomIn animate__delay-1s">Pollería Viero's</h1>
+                <p class="animate__animated animate__backInLeft animate__delay-1s">El mejor pollo a la brasa de lima norte</p>
+                <a href="#portafolio" class="btn btn-danger topmargin-md animate__animated animate__backInUp animate__delay-1s">Productos <i class="fas fa-arrow-alt-circle-down"></i></a>
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
         <div class="container-fluid">
             <div class="content-center">
                 <h2>Nuestros productos</h2>
-                <p>Comida rapida, rica y a tu alcance</p>
+                <p>Comida rápida, rica y a tu alcance</p>
             </div>
             
             <div class="row">
@@ -66,7 +66,7 @@
                             <a href="#pollobrasa">
                                 <h2>Pollo a la brasa</h2>
                             </a>
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h4>Pollo, papas, crema y ensalada</h4>
                             </a>
                         </div>
@@ -77,10 +77,10 @@
                 <div class="col-md-6">
                     <div class="portafolio-container">
                         <div class="portafolio-defails">
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h2>Pollo broaster</h2>
                             </a>
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h4>Broaster, papas, crema y ensalada</h4>
                             </a>
                         </div>
@@ -91,10 +91,10 @@
                 <div class="col-md-6">
                     <div class="portafolio-container">
                         <div class="portafolio-defails">
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h2>Comida criolla</h2>
                             </a>
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h4>Plato de comida, cremas y ensalada</h4>
                             </a>
                         </div>
@@ -105,10 +105,10 @@
                 <div class="col-md-6">
                     <div class="portafolio-container">
                         <div class="portafolio-defails">
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h2>Hamburguesa</h2>
                             </a>
-                            <a href="#">
+                            <a href="#pollobrasa">
                                 <h4>Hamburguesa, pan, papas, ensalada y cremas</h4>
                             </a>
                         </div>
@@ -135,7 +135,7 @@
                         <div class="menber-defails">
                             <img src="imagenes/pollobrasa.jpg" class="img-fluid" alt=""/>
                             <div class="publicidad content-center">
-                                <h4>1 Pollo Entero + 1 Lt. Chicha o Maracuya</h4>
+                                <h4>1 Pollo Entero + 1 Lt. Chicha o Maracuyá</h4>
                                 <p>Papas, cremas y ensalada</p>
                                 <h5><b>S/ 40.00</b></h5>
                             </div>
@@ -225,7 +225,7 @@
                         <div class="menber-defails">
                             <img src="imagenes/hamburguesaclasica.jpg" class="img-fluid" alt=""/>
                             <div class="publicidad content-center">
-                                <h4>Clasica</h4>
+                                <h4>Clásica</h4>
                                 <p>Papas, cremas y ensalada</p>
                                 <h5><b>S/ 5.00</b></h5>
                             </div>
@@ -296,7 +296,7 @@
                         <div class="menber-defails">
                             <img src="imagenes/chicharron.jpg" class="img-fluid" alt=""/>
                             <div class="publicidad content-center">
-                                <h4>Chicharron</h4>
+                                <h4>Chicharrón</h4>
                                 <p>Pescado o mixto</p>
                                 <h5><b>S/ 18.00</b></h5>
                             </div>
@@ -316,10 +316,10 @@
                  <div class="col-md-7">
                     <div class="contacto">
                         <div class="content-center">
-                            <h4><i class="fas fa-location-arrow"></i> Ubicanos</h4>
-                            <h5>Asoc. Victor Raul Halla de la Torre 551</h5>
+                            <h4><i class="fas fa-location-arrow"></i> Ubícanos</h4>
+                            <h5>Av. Chinchaysuyo Víctor Raúl Haya de la Torre, Lima, Independencia 15331</h5>
                             <div class="topmargin-md"></div>
-                            <h4><i class="fas fa-headset"></i> Contactanos</h4>
+                            <h4><i class="fas fa-headset"></i> Contáctanos</h4>
                             <div class="row">
                                 <div class="col-md-4">
                                     <i class="fas fa-mobile-alt"></i>
