--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <title>Vieros</title>
     <link rel="stylesheet" href="estilos/style.css"> 
     <link rel="stylesheet" href="estilos/bootstrap.css"> 
-
+    <link rel="stylesheet" href="estilos/wssp.css"> 
+    <link rel="icon" type="" href="imagenes/vieros.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-
     
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=+051977371136&text=Buenos%20dias,%20quisiera%20mas%20informacion." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
 </head>
   <body>
     
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="imagenes/vieros.png" class="logo-brand" alt="Vieros"></a>
+            <img src="imagenes/vieros.png" class="logo-brand" alt="Vieros">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-align-justify"></i>
             </button>
@@ -29,7 +34,7 @@
                         <a class="nav-link" href="#" id="home">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#aboutus" id="home">Promociones </a>
+                        <a class="nav-link" href="#aboutus" id="promociones">Promociones </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#delivery" id="contactanos">Contactanos</a>
@@ -130,14 +135,14 @@
                 <h3>Pollo a la brasa</h3>
             </div>
             <div class="row topmargin-sm"> 
-                <div class="col-md-4">
+                <div class="col-md-4 ">
                     <div class="menber-container">
                         <div class="menber-defails">
                             <img src="imagenes/pollobrasa.jpg" class="img-fluid" alt=""/>
                             <div class="publicidad content-center">
                                 <h4>1 Pollo Entero + 1 Lt. Chicha o Maracuyá</h4>
                                 <p>Papas, cremas y ensalada</p>
-                                <h5><b>S/ 40.00</b></h5>
+                                <h5><b>S/ 42.90</b></h5>
                             </div>
                         </div>
                     </div>
@@ -150,7 +155,7 @@
                             <div class="publicidad content-center">
                                 <h4>1 Pollo Entero + 1/4 Pierna</h4>
                                 <p>Papas, cremas y ensalada</p>
-                                <h5><b>S/ 40.00</b></h5>
+                                <h5><b>S/ 39.90</b></h5>
                             </div>
                         </div>
                     </div>
@@ -163,7 +168,7 @@
                             <div class="publicidad content-center">
                                 <h4>1 Pollo Entero + 1.5Lt PepsiCola</h4>
                                 <p>Papas, cremas y ensalada</p>
-                                <h5><b>S/ 40.00</b></h5>
+                                <h5><b>S/ 33.90</b></h5>
                             </div>
                         </div>
                     </div>
@@ -320,7 +325,7 @@
                             <h5>Av. Chinchaysuyo Víctor Raúl Haya de la Torre, Lima, Independencia 15331</h5>
                             <div class="topmargin-md"></div>
                             <h4><i class="fas fa-headset"></i> Contáctanos</h4>
-                            <div class="row">
+                            <div class="row topmargin-sm">
                                 <div class="col-md-4">
                                     <i class="fas fa-mobile-alt"></i>
                                     <p>965877412</p>
@@ -356,8 +361,8 @@
         <p>Desarrollado por Javier Galarza &COPY; 2020</p>
     </footer>
 
-
-    <!--JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="js/Delivery.js"></script>
     <script src="https://kit.fontawesome.com/437756fd95.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
