--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     </section>
         
     <section id="delivery" class="bg-dark">
-        <div class="container logo-brand">
+        <div class="contenedores">
             <div class="row">
                  <div class="col-md-7">
                     <div class="contacto">
@@ -325,25 +325,26 @@
                             <h5>Av. Chinchaysuyo Víctor Raúl Haya de la Torre, Lima, Independencia 15331</h5>
                             <div class="topmargin-md"></div>
                             <h4><i class="fas fa-headset"></i> Contáctanos</h4>
+                            
                             <div class="row topmargin-sm">
                                 <div class="col-md-4">
                                     <i class="fas fa-mobile-alt"></i>
-                                    <p>965877412</p>
+                                    <p>051-965877412</p>
                                 </div>
                                 <div class="col-md-4">
                                     <i class="fas fa-phone-alt"></i>
-                                    <p> 5478966</p>
+                                    <p>01-5478966</p>
                                 </div>
                                 <div class="col-md-4">
                                     <i class="fab fa-whatsapp"></i>
-                                    <p> 965877412</p>
+                                    <p>051-965877412</p>
                                 </div>
                             </div>
                         </div>
                     </div>       
                 </div>
                 <div class="col-md-1"></div>
-                <div class="contacto col-md-4">
+                <div class="contacto col-md-4 col-12">
                     <div class="map">
                         <h4><i class="fas fa-map-marked-alt"></i> Nos encontramos en...</h4>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.9754759090606!2d-77.05814718457631!3d-11.976198743853928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cf3a90c6f175%3A0xe25fd30c213cf479!2sPolleria%20Vieros!5e0!3m2!1ses-419!2spe!4v1589649237353!5m2!1ses-419!2spe" ></iframe>
