--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=51977371136&text=Buenos%20dias,%20quisiera%20mas%20informacion." class="float" target="_blank">
+    <a href="https://wa.me/051943064138?text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20su%20catalogo,%20gracias%20." class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
 </head>
