--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="intent://send/51943064138#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" class="float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=+51943064138" class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
 </head>
